--- a/src/App.css
+++ b/src/App.css
@@ -43,10 +43,10 @@
 }
 
 .footer {
-    height: 5vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .marquee {
@@ -89,6 +89,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 0.5px solid gray;
+    box-shadow: 2px 2px 10px black;
 }
 
 ul {
@@ -101,7 +103,7 @@ ul {
 }
 
 .enable-animation .marquee_content {
-    animation: scroll 10s linear infinite;
+    animation: scroll 15s linear infinite;
 }
 
 .stacks {
@@ -118,4 +120,8 @@ ul {
     background-color: black;
     color: white;
     font-weight: 600;
+}
+
+.footer a:hover {
+    color: rgb(255, 255, 119);
 }
