card shadow update

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
 
 .carousel-inner {
     margin: 10px auto;
+    box-shadow: 1px 1px 10px darkgray;
 }
 
 .certificate {
@@ -32,6 +33,7 @@
 .card {
     width: 18rem;
     transition: transform 0.3s;
+    box-shadow: 1px 1px 10px darkgray;
 }
 
 .card:hover {
